XMLtoCSV/objects/unpackaged/objects/PCYC_JBI_Call_Detail__c.object
<CustomObject>
    <description>Staging JBI Call Detail records.</description>
    <fields>
        <fullName>PCYC_Call_Source__c</fullName>
        <description>Call Source.</description>
        <label>Call Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Del_Flg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete Flag, default flase.</description>
        <label>Delete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Detail_Priority__c</fullName>
        <description>A whole number representing the order in which the detail was delivered.</description>
        <label>Detail Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Call Detail ( JBI Call Detail record Id)</description>
        <externalId>true</externalId>
        <label>JBI Call Detail Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Call_ref__c</fullName>
        <label>JBI Call</label>
        <referenceTo>PCYC_JBI_Call__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>PCYC_JBI_Call_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_Product__c</fullName>
        <description>Product</description>
        <label>Product</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Staging JBI Call Detail</label>
    <nameField>
        <label>JBI Call Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging JBI Call Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>